# Inference-Time-Distribution-Steering

./: .gitignore  AGENTS.md  README.md  pyproject.toml  pytest.ini  requirements.txt
configs/: deepspeed_zero2_cpu_offload.json  itds_qwen25_7b_math.yaml  qwen25_7b_math.yaml  qwen25_7b_simplerl.yaml
limit-of-RLVR/: .gitignore  README.md
limit-of-RLVR/math/: README.md  eval_math_nodes.sh  pass@k.py  setup.py
scripts/: build_jsonl_offsets.py  build_prompt_eval_set.py  compare_eval_outputs.py  convert_limit_of_rlvr_outputs.py  eval_checkpoints.py  eval_itds_checkpoint.py  inspect_response_length_distribution.py  inspect_topk_entropy.py  inspect_training_lengths.py  rerollout_entropy_branches.py  rollout_pipeline.py  run_itds_train.sh  run_rollout.sh  run_train.sh  run_train_math.sh  run_train_simplerl.sh
src/inference_time_distribution_steering.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/itds/: __init__.py  config.py  dataset.py  generate.py  jsonl.py  limit_of_rlvr_io.py  model.py  objectives.py  train.py
src/offline_subtb/: __init__.py  check_loss.py  compute_ref_logprobs.py  config.py  dataset.py  eval.py  inspect_batch.py  limit_of_rlvr_io.py  loss.py  model.py  tokenization.py  train.py  utils.py
tests/: test_compare_eval_outputs.py  test_itds_objectives.py  test_limit_of_rlvr_io.py  test_rollout_pipeline.py  test_tokenization.py
wandb/: latest-run
wandb/run-20260527_200333-neoyhd0x/: run-neoyhd0x.wandb
wandb/run-20260527_200756-p7qaof5s/: run-p7qaof5s.wandb
wandb/run-20260529_193108-zqkh02cf/: run-zqkh02cf.wandb
(+49 files in other folders)
